--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ ACCESS_TOKEN_EXPIRE_MINUTES=
 REFRESH_TOKEN_EXPIRE_MINUTES=
 JWT_SECRET_KEY=""
 
-
+# Frontend server base URL
 FRONTEND_URL=
 
 # Database config
