minor: change project name and add references for JSON sample requests

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,9 @@ CLOUDINARY_API_SECRET=""
 
 # Chat service
 SOCKET_SECRET_KEY=""
+
+DEFAULT_FIRST_NAME="Donald"
+DEFAULT_LAST_NAME="Trump"
+DEFAULT_EMAIL="donaldtrump47th@gmail.com"
+DEFAULT_PASSWORD="!2x8w6?0gO94_4,v"
+DEFAULT_NEW_PASSWORD="H14l@6c$9W{ED?18"
